--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 .capa {
   height: 100vh;
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
