--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body {
 
 .capa {
   height: 100vh;
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
